feat: finaliza aside

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,7 +33,7 @@
   /* Accent Colors */
   --purple: #B259FF;
   --fuschia: #FF59F9;
-  --pink: #FF59BB;
+  --pink: #FF598B;
   --orange: #FF8B59;
   --yellow: #FFCD59;
   --lime: #E1FF59;
