feat: finaliza seção termos e implementa botão de envio

--- a/styles/form.css
+++ b/styles/form.css
@@ -26,3 +26,9 @@ fieldset + fieldset {
     color: var(--text-heading);
   }
 }
+
+.action-wrapper {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: end;
+}
