--- a/styles/fields/checkbox.css
+++ b/styles/fields/checkbox.css
@@ -59,3 +59,61 @@
     content: "Claro";
   }
 }
+
+#terms {
+  flex-direction: column;
+  gap: 2.5rem;
+
+  & hr {
+    margin-top: 2.5rem;
+    border: none;
+    height: 2px;
+    background-color: var(--input-stroke);
+  }
+
+  .terms-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+  }
+
+  .term-inner {
+    display: flex;
+    align-items: flex-start;
+    gap: .25rem;
+    cursor: pointer;
+
+    & strong {
+      color: var(--brand-light);
+    }
+  }
+
+  .checkbox {
+    position: relative;
+
+    & [type="checkbox"] {
+      position: absolute;
+      all: unset;
+      inset: 0;
+    }
+
+    .checkbox-label {
+      display: flex;
+      align-items: flex-start;
+      gap: .25rem;
+      cursor: pointer;
+    }
+
+    .checkbox-image {
+      flex: 0 0 1.5rem;
+      height: 1.5rem;
+      background-image: url(../../assets/icons/checkbox-default.svg);
+      background-repeat: no-repeat;
+    }
+
+    &:has(input:checked) .checkbox-image {
+      background-image: url(../../assets/icons/checkbox-checked.svg);
+      background-repeat: no-repeat;
+    }
+  }
+}
